#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(xbeach, [v18], [d.roelvink@unesco-ihe.org])
AC_CONFIG_SRCDIR([boundaryconditions.F90])
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE

AC_CONFIG_HEADERS([config.h])


# Checks for programs.
AC_PROG_FC
AC_PROG_F77
AC_PROG_INSTALL
# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.


AC_CONFIG_FILES([Makefile
		 doc/Makefile])
AC_OUTPUT
